@@ -146,6 +146,32 @@ class AsyncStreamTest extends FunSuite with GeneratorDrivenPropertyChecks {
     assert(p.isDefined)
   }
 
+  test("memoized stream") {
+    class Ctx[A](ops: AsyncStream[Int] => AsyncStream[A]) {
+      var once = 0
+      val s: AsyncStream[Int] = 2 +:: {
+        once = once + 1
+        if (once > 1) throw new Exception("evaluated more than once")
+        AsyncStream.of(1)
+      }
+
+      val ss = ops(s)
+      ss.foreach(_ => ())
+      // does not throw
+      ss.foreach(_ => ())
+    }
+
+    new Ctx(s => s.map(_ => 0))
+    new Ctx(s => s.mapF(_ => Future.value(1)))
+    new Ctx(s => s.flatMap(of(_)))
+    new Ctx(s => s.filter(_ => true))
+    new Ctx(s => s.withFilter(_ => true))
+    new Ctx(s => s.take(2))
+    new Ctx(s => s.takeWhile(_ => true))
+    new Ctx(s => s.scanLeft(Future.Done) { (_, _) => Future.Done })
+    new Ctx(s => s ++ s)
+  }
+
   // Note: We could use ScalaCheck's Arbitrary[Function1] for some of the tests
   // below, however ScalaCheck generates only constant functions which return
   // the same value for any input. This makes it quite useless to us. We'll take
@@ -187,6 +213,24 @@ class AsyncStreamTest extends FunSuite with GeneratorDrivenPropertyChecks {
     forAll { (a: List[Int], b: List[Int]) =>
       assert(toSeq(fromSeq(a) ++ fromSeq(b)) == a ++ b)
     }
+  }
+
+  test("++ with a long stream") {
+    var count = 0
+    def genLongStream(len: Int): AsyncStream[Int] =
+      if (len == 0) {
+        AsyncStream.of(1)
+      } else {
+        count = count + 1
+        1 +:: genLongStream(len - 1)
+      }
+    // concat a long stream does not stack overflow
+    val s = genLongStream(1000000) ++ genLongStream(3)
+    s.foreach(_ => ())
+    val first = count
+    s.foreach(_ => ())
+    // the values are evaluated once
+    assert(count == first)
   }
 
   test("foldRight") {
